--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Valentine.exe</title>
+  <meta charset="UTF-8">
+  <title>valentine.exe</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="terminal">
-    <p class="line">> booting valentine.exe...</p>
-    <p class="line">> initializing feelings...</p>
-    <br>
-    <p class="question">Jotzer, will you be my Valentine?</p>
+    <p class="boot">&gt; booting valentine.exe...</p>
+    <p class="boot">&gt; loading emotions...</p>
+    <p class="boot">&gt; connecting to jotzer...</p>
 
-    <!-- image placeholder -->
-    <div class="image-placeholder">
-      [ image loading... ]
-    </div>
+    <img src="dawg.jpg" alt="valentine image" class="valentine-img">
+
+    <p class="question">Jotzer, will you be my Valentine?</p>
 
     <div class="buttons">
       <button id="yesBtn">YES</button>
